src/objects/Chipset_Line_Program__c.object
<CustomObject>
    <description>Junction object between Chipset Lines and PMD Programs</description>
    <fields>
        <fullName>Chipset_Line__c</fullName>
        <label>Chipset Line</label>
        <referenceTo>Chipset_Line__c</referenceTo>
        <relationshipLabel>Chipset Lines Programs</relationshipLabel>
        <relationshipName>Chipset_Lines_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Label__c</fullName>
        <label>Entry Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Status__c</fullName>
        <label>Entry Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_PMD__c</fullName>
        <label>Program  (PMD)</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>Chipset Lines Programs</relationshipLabel>
        <relationshipName>Chipset_Lines_Programs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Chipset Line Program</label>
    <nameField>
        <displayFormat>CLP-{00000}</displayFormat>
        <label>Chipset Line Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chipset Lines Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>